import com.github.spotbugs.snom.Confidence
import com.github.spotbugs.snom.Effort
import com.github.spotbugs.snom.SpotBugsTask
import org.gradle.api.tasks.testing.logging.TestExceptionFormat
import org.gradle.api.tasks.testing.logging.TestLogEvent
import org.springframework.boot.gradle.plugin.SpringBootPlugin

buildscript {
    dependencies {
        classpath libs.spring.boot.plugin
        // some example projects use jmolecules which allows syntactic sugar via bytebuddy
        // bytebuddy plugin is disabled by default and must be manually enabled via
        // 1) `apply plugin: 'net.bytebuddy.byte-buddy-gradle-plugin'`
        // 2) specify bytebuddy plugin `byteBuddy { transformation { plugin = JMoleculesPlugin.class } }`
        // by submodules.
        classpath platform(libs.jmolecules.bom)
        classpath 'org.jmolecules.integrations:jmolecules-bytebuddy'
    }
    // https://docs.gradle.org/current/userguide/dependency_locking.html#sec:activate-locking-build-script
    configurations.classpath {
        resolutionStrategy.activateDependencyLocking()
    }
}

plugins {
    id 'idea'

    alias(libs.plugins.nebula.release)
    alias(libs.plugins.nebula.lint)
    alias(libs.plugins.nebula.project)
    alias(libs.plugins.nebula.facet)
    alias(libs.plugins.spotbugs) apply false
    alias(libs.plugins.spring.boot) apply false
    alias(libs.plugins.lombok) apply false
    alias(libs.plugins.bytebuddy) apply false
    // TODO: enable on demand - currently unused
    // alias(libs.plugins.graalvm.buildtools.native) apply false
}

contacts {
    'theborakompanioni+github@gmail.com' {
        moniker 'theborakompanioni'
        github 'theborakompanioni'
    }
}

def testcontainersRyukDisabled = System.getenv("TESTCONTAINERS_RYUK_DISABLED") ?: "true"
def isIdeEnv = System.getProperty('idea.active')

configurations.configureEach {
    resolutionStrategy {
        preferProjectModules()
        // fail eagerly on version conflict (includes transitive dependencies)
        // e.g. multiple different versions of the same dependency (group and name are equal)
        failOnVersionConflict()
    }
}

allprojects {
    apply plugin: 'nebula.lint'

    group = 'io.github.theborakompanioni'

    gradleLint {
        alwaysRun = false // do not automatically run - must be executed manually
        autoLintAfterFailure = false // only run lint after a successful build
        criticalRules = [
                'dependency-parantheses',
                'overridden-dependency-version',
                'unused-exclude-by-conf',
                'dependency-tuple-expression'
        ]
        // duplicate dependency false positives from "compileOnly 'javax.servlet:javax.servlet-api'"
        excludedRules = ['duplicate-dependency-class']
    }
}

configure(rootProject) {
    defaultTasks 'clean', 'build', 'integrationTest'

    tasks.register('clean').configure {
        doLast {
            delete fileTree("${rootProject.projectDir}") {
                include '**/*.log'
                include '**/*.log.*.gz'
                include '**/*.log.*.tmp'
            }
        }
    }
}

subprojects {
    apply plugin: 'idea'
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'jacoco'
    apply plugin: 'checkstyle'
    apply plugin: 'com.github.spotbugs'
    apply plugin: 'com.netflix.nebula.project'
    apply plugin: 'com.netflix.nebula.info'
    apply plugin: 'com.netflix.nebula.facet'
    apply plugin: 'com.netflix.nebula.integtest-standalone'
    apply plugin: 'io.freefair.lombok'
    apply plugin: 'io.spring.dependency-management'

    configurations.configureEach {
        resolutionStrategy {
            preferProjectModules()
        }
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
        toolchain {
            languageVersion = JavaLanguageVersion.of(JavaVersion.VERSION_21.getMajorVersion())
        }
    }

    dependencyManagement {
        imports {
            mavenBom SpringBootPlugin.BOM_COORDINATES
            mavenBom rootProject.libs.jmolecules.bom.get().toString()
            mavenBom rootProject.libs.spring.shell.bom.get().toString()
        }
    }

    dependencies {
        compileOnly rootProject.libs.spotbugs.annotations
        testCompileOnly rootProject.libs.spotbugs.annotations
        spotbugsPlugins rootProject.libs.findsecbugs.plugin

        implementation 'org.slf4j:slf4j-api'
        implementation rootProject.libs.guava

        testImplementation 'org.junit.jupiter:junit-jupiter-api'
        testImplementation rootProject.libs.apache.commons.lang3
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation('org.springframework.boot:spring-boot-starter-test') {
            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
        }
    }

    compileJava {
        options.compilerArgs << '-parameters'
    }

    jar {
        exclude('*-local.yml')
        exclude('**/mainnet/**')
        exclude('**/*.proto')

        includeEmptyDirs = false
    }

    sourcesJar {
        // needed till duplicate bug in protobuf gradle plugin is resolved.
        // see https://github.com/google/protobuf-gradle-plugin/issues/522 (last checked 2023-01-18)
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE

        archiveClassifier.set('sources')
        from sourceSets.main.java
    }

    tasks.register('testJar', Jar) {
        archiveClassifier.set('test')
        from sourceSets.test.output
    }

    tasks.named("assemble") {
        dependsOn(testJar)
    }

    pluginManager.withPlugin('org.springframework.boot') {

        dependencies {
            testAndDevelopmentOnly 'org.springframework.boot:spring-boot-devtools'
        }

        jar {
            enabled = true
        }

        bootJar {
            archiveClassifier.set('boot')

            exclude('*-local.yml')
            exclude('**/mainnet/**')
            exclude('**/*.proto')

            includeEmptyDirs = false
            duplicatesStrategy = DuplicatesStrategy.FAIL
        }

        bootRun {
            enabled = true
            args = ['--spring.profiles.active=development']

            environment "TESTCONTAINERS_RYUK_DISABLED", testcontainersRyukDisabled
        }

        springBoot {
            buildInfo {
                properties {
                    // overwrite "time" property to enable reproducible builds
                    // see https://reproducible-builds.org/docs/timestamps/
                    time = System.getenv('SOURCE_DATE_EPOCH') ?: null
                }
            }
        }
    }

    facets {
        e2eTest {
            parentSourceSet = 'test'
            includeInCheckLifecycle = false
        }
        exampleTest {
            parentSourceSet = 'test'
            includeInCheckLifecycle = false
        }
        testcontainerTest {
            parentSourceSet = 'test'
            includeInCheckLifecycle = false
        }
    }

    test {
        environment "TESTCONTAINERS_RYUK_DISABLED", testcontainersRyukDisabled

        finalizedBy jacocoTestReport // report is always generated after tests run

        useJUnitPlatform()
    }

    configure([integrationTest, e2eTest, exampleTest, testcontainerTest]) {
        environment "TESTCONTAINERS_RYUK_DISABLED", testcontainersRyukDisabled

        useJUnitPlatform()
    }

    jacocoTestReport {
        dependsOn test // tests are required to run before generating the report

        reports {
            xml.required = true
            html.required = true
            csv.required = false
        }
    }

    lombok {
        version = rootProject.libs.versions.lombok.get()
    }

    tasks.withType(Test).configureEach {
        testLogging {
            // set options for log level LIFECYCLE
            events TestLogEvent.STARTED, TestLogEvent.PASSED, TestLogEvent.SKIPPED, TestLogEvent.FAILED
            showExceptions = true
            exceptionFormat = TestExceptionFormat.FULL
            showCauses = true
            showStackTraces = true
        }

        addTestListener(new TestListener() {
            @Override
            void afterSuite(TestDescriptor suite, TestResult result) {
                if (!suite.parent) { // will match the outermost suite
                    def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
                    def startItem = '|  ', endItem = '  |'
                    def repeatLength = startItem.length() + output.length() + endItem.length()
                    println('\n' + ('-' * repeatLength) + '\n' + startItem + output + endItem + '\n' + ('-' * repeatLength))
                }
            }
        })
    }

    tasks.register('dependencyTree', DependencyReportTask) {}

    javadoc {
        onlyIf { project.hasProperty('javadocEnabled') }
        // Note: `source = delombok` is applied by plugin 'io.freefair.lombok' automatically
        failOnError = true
        options {
            tags = [
                    'apiNote:a:API Note:',
                    'implSpec:a:Implementation Requirements:',
                    'implNote:a:Implementation Note:'
            ]
        }
    }

    spotbugs {
        toolVersion = rootProject.libs.versions.spotbugs.get()
        effort = Effort.MAX
        reportLevel = Confidence.valueOf('LOW')
        ignoreFailures = false
        excludeFilter = rootProject.file('./spotbugs-exclude.xml')
        reportsDir = layout.buildDirectory.dir("./reports/spotbugs").get().asFile
    }
    tasks.withType(SpotBugsTask).configureEach {
        onlyIf { gradle.taskGraph.hasTask('build') }
        reports {
            html.required = true
            xml.required = false
        }
    }

    checkstyle {
        toolVersion = rootProject.libs.versions.checkstyle.get()
        configFile = rootProject.file('./checkstyle.xml')
        maxErrors = 0
        ignoreFailures = false
        reportsDir = layout.buildDirectory.dir("./reports/checkstyle").get().asFile
    }
    tasks.withType(Checkstyle).configureEach {
        onlyIf { gradle.taskGraph.hasTask('build') }
        reports {
            xml.required = false
            html.required = true
        }
    }

    tasks.withType(AbstractArchiveTask).configureEach {
        // activate reproducible archives
        // see https://docs.gradle.org/current/userguide/working_with_files.html#sec:reproducible_archives
        preserveFileTimestamps = false
        reproducibleFileOrder = true
    }

    infoBroker {
        // exclude properties that prevent reproducible builds
        excludedManifestProperties = [
                'Created-By',
                'Built-By',
                'Build-Date',
                'Build-Date-UTC',
                'Build-Host',
                'Built-OS',
                'Build-Timezone',
                'Build-Url',
        ]
    }
}

// enable publishing for all subproject except for "example applications"
configure(subprojects.findAll { project -> project.subprojects.isEmpty() &&
        !project.pluginManager.hasPlugin('org.springframework.boot') &&
        project.name.indexOf('-example-application') < 0 &&
        !project.name.startsWith('lightning-commons-') &&
        !project.name.startsWith('lightning-regtest-') }) {
    apply from: "${project.rootDir}/publish.gradle"
}
